--- a/CSS/webtest.html
+++ b/CSS/webtest.html
@@ -262,7 +262,7 @@
               <div class="holbeinspecial1">
                 <div class="image-special-slide1">
                     <figure>
-                        <img src="https://ae01.alicdn.com/kf/Hcdf1ab55afd641718d5e3659b5dae0abf/Japan-Holbein-Seven-Gods-Nana-Watercolor-Paint-Collaboration-New-Color-Matching-Set-Artist-Grade-12-Colors.jpg_Q90.jpg_.webp">
+                        <img src="https://www.dhresource.com/0x0/f2/albu/g8/M00/93/7D/rBVaV16iid6AHfG3AAMAAk59m0o970.jpg">
                         <figcaption>Japan Holbein Seven Gods Nana Watercolor Paint.<em> Credit: lottemarket.vn.</em></figcaption>
                       </figure>
                   </div>
