--- a/CSS/webtest.html
+++ b/CSS/webtest.html
@@ -27,7 +27,7 @@
 
       <div class="melodyheader">
         <div class="melodyeslide">
-          <span class="melodye"><a href="#topBtn">Melodye</a></span> <span class="melodye"><a href="melodyecover.html">Watercolour</a></span>
+          <span class="melodye"><a href="#topBtn">Melodye</a></span> <span class="melodye"><a href="index.html">Watercolour</a></span>
         </div>
       </div>
         <h5>ホルベイン水彩</h5>
@@ -416,7 +416,7 @@
                   For a full review of 24-colour Holbein Watercolour, visit <a href="https://www.youtube.com/watch?v=cr3sfcoxCDY" target="_blank"><p1>here</p1></a> or (<a href="#top" title="return to top">return to the top of the page</a>) 
                 </li>
               </ol>
-                <h2><a href="melodyecover.html">GO TO HOMEPAGE</a></h2>
+                <h2><a href="index.html">GO TO HOMEPAGE</a></h2>
         </div>
     
       
