--- a/CSS/index.html
+++ b/CSS/index.html
@@ -59,11 +59,11 @@
     <div class="lower-corner-image">
       <img id="lower-corner-image" src="rose3fixed.png" alt="Left Corner Image">
     </div>
-    <h1><a href="index.html">Holbein</a></h1>
+    <h1><a href="index1.html">Holbein</a></h1>
     <section class="fade-in-section-holbein">
     <p1>An exquisite watercolor brand from Japan. Holbein Watercolor is a name synonymous with quality, innovation, and excellence in the world of watercolor painting. Established in Japan in the 1900s, Holbein has become a go-to brand for professional and amateur artists.</p1>
     <div class="button-container">
-      <a href="index.html" class="see-more-btn">See More</a>
+      <a href="index1.html" class="see-more-btn">See More</a>
     </div>
   </section>
   </section>
